--- a/index.html
+++ b/index.html
@@ -2,30 +2,42 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>GK Mock Test</title>
-  <link rel="stylesheet" href="style.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <link href="style.css" rel="stylesheet" />
 </head>
 <body>
-  <div class="container">
-    <h1>GK Mock Test</h1>
-    <div id="quiz-box">
-      <div id="question-box">
-        <p id="question"></p>
-        <ul id="options"></ul>
+
+  <div class="main-bg">
+    <div class="container py-5">
+      <div class="card shadow-lg p-4 rounded-5 glassy">
+        <h1 class="text-center mb-4 fw-bold text-primary">GK Mock Test</h1>
+        
+        <div id="quiz-box">
+          <div class="d-flex justify-content-between align-items-center mb-3">
+            <div id="progress" class="fw-semibold"></div>
+            <div id="timer" class="text-danger fw-bold fs-5">⏱ 2:00</div>
+          </div>
+          <h5 id="question" class="mb-4"></h5>
+          <div id="options" class="d-grid gap-3"></div>
+          <div class="text-end mt-4">
+            <button id="next-btn" class="btn btn-primary px-4" disabled>Next</button>
+          </div>
+        </div>
+
+        <div id="result-box" class="text-center d-none">
+          <h2 class="fw-bold">🎉 Test Completed!</h2>
+          <p id="score" class="fs-4 mb-4"></p>
+          <button onclick="location.reload()" class="btn btn-success px-4">Try Again</button>
+        </div>
       </div>
-      <div id="quiz-controls">
-        <button id="next-btn">Next</button>
-        <p id="timer">Time: <span id="time">30</span>s</p>
-      </div>
-    </div>
-    <div id="result-box" class="hidden">
-      <h2>Quiz Completed!</h2>
-      <p id="score"></p>
-      <button onclick="location.reload()">Try Again</button>
     </div>
   </div>
-  <script src="data.js"></script>
-  <script src="script.js"></script>
+
+<script src="script.js"></script>
+</body>
+</html>
+t.js"></script>
 </body>
 </html>
